--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Yinxiazhao.github.io by yinxiazhao</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+<!doctype html> <html>   <head>     <meta charset="utf-8">     <meta http-equiv="X-UA-Compatible" content="chrome=1">     <title>ZHAO Yinxia</title>      <link rel="stylesheet" href="stylesheets/styles.css">     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,12 +7,24 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Yinxiazhao.github.io</h1>
+        <h1>ZHAO Yinxia</h1>
         <p></p>
-
-
         <p class="view"><a href="https://github.com/yinxiazhao">View My GitHub Profile</a></p>
-
+        <h3><a name="education" class="anchor" href="#education"><span class="octicon octicon-link"></span></a>Education</h3>
+        <p>
+            <b>2011 - 2012</b> <br>
+            MSc degree of Computer Science, <br>
+            University Paris Descartes, France <br>
+            <b>2009 – 2011</b> <br>
+            MSc degree of Design and engineering of Convergence Networks,<br>
+            TELECOM-­‐Bretagne, France<br>
+            <b>2005 – 2009</b> <br>
+            Bachelor’s degree of Telecommunication Engineering, <br>
+            Beijing University of Posts and Telecommunications, Chine
+        </p>
+            
+        <h3><a name="professional-experience" class="anchor" href="#erofessional-experience"><span class="octicon octicon-link"></span></a>Professional Experience</h3>
+        <h3><a name="technical-skills" class="anchor" href="#technical-skills"><span class="octicon octicon-link"></span></a>Technical Skills</h3>
       </header>
       <section>
         <h3>
