--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 						<p>Information System Developer &nbsp;&bull;&nbsp; Photographer &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://www.flickr.com/photos/hydezhao" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+								<li><a href="cv.html" class="icon fa-rocket"><span class="label">CV</span></a></li>
+								<li><a href="https://www.linkedin.com/pub/zhao-yinxia/17/9a2/8b7" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/yinxiazhao" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:yinxia.zhao@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
