--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Yinxia Zhao</h1>
-						<p>Information System Developer &nbsp;&bull;&nbsp; Photographer &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p>Information System Developer &nbsp;&bull;&nbsp; Photographer &nbsp;&bull;&nbsp; Optimist</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.flickr.com/photos/hydezhao" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-								<li><a href="cv.html" class="icon fa-rocket"><span class="label">CV</span></a></li>
+								<li><a href="CV.html" class="icon fa-rocket"><span class="label">CV</span></a></li>
 								<li><a href="https://www.linkedin.com/pub/zhao-yinxia/17/9a2/8b7" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/yinxiazhao" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:yinxia.zhao@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
