--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>ZHAO YINXIA</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -40,7 +40,7 @@
 								<li><a href="https://github.com/yinxiazhao" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:yinxia.zhao@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								
-								<li><a href="gallery.html" class="icon fa-image"><span class="label">Image</span></a></li>
+								<li><a href="gallery/gallery.html" class="icon fa-image"><span class="label">Image</span></a></li>
 							</ul>
 						</nav>
 					</header>
