--- a/CV.html
+++ b/CV.html
@@ -46,7 +46,7 @@
 
 
         <h3><a name="technical-skills" class="anchor" href="#technical-skills"><span class="octicon octicon-link"></span></a>Technical Skills</h3>
-       <p>C/C++, Python, PL/SQL, Jenkins, CMake, google-test, Multi-thread, TCP/IP Socket, distributed sytem architecture</p> 
+       <p>C/C++, Python, PL/SQL, Jenkins, CMake, google-test, Multi-thread, TCP/IP socket programming, distributed sytem architecture</p> 
       </header>
       <section>
         <h3><a name="professional-experience" class="anchor" href="#erofessional-experience"><span class="octicon octicon-link"></span></a>Professional Experience</h3>
@@ -60,25 +60,6 @@
             <b><i>2010 - 2011</i></b> <br>
             Trainee R&D Ingineer at France Telecom Orange Labs<br><br>
         </p>   
-
-        <h3><a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-        <p>
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-        </p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
