--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
             <ul class="social">
                <li><a href="https://www.facebook.com/yinxia.zhao"><i class="fa fa-facebook"></i></a></li>
                <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+               <li><a href="https://www.linkedin.com/pub/zhao-yinxia/17/9a2/8b7"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="http://instagram.com/hydezhao"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.flickr.com/photos/hydezhao"><i class="fa fa-flickr"></i></a></li>
+               <li><a href="https://github.com/yinxiazhao"><i class="fa fa-github"></i></a></li>
+               <li><a href="mailto:yinxia.zhao@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
             </ul>
          </div>
       </div>
