--- a/index.html
+++ b/index.html
@@ -95,12 +95,23 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
+blablablablablablablablablablablablablabla
             </p>
 
             <div class="row">
@@ -109,19 +120,19 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Yinxia Zhao</span><br>
+						   <span>43 Bis Rue De Bellvue,<br>
+						         92100, BOULOGNE-BILLANCOURT, FRANCE
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>(+33) 6 66 70 99 08</span><br>
+                     <span>yinxia.zhao@gmail.com</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="doc/CV_EN_Yinxia_ZHAO_2014.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -152,8 +163,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Paris Descartes University</h3>
+                  <p class="info">MSc in Mathematics and Information <span>&bull;</span> <em class="date">2011 - 2012</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -170,8 +181,25 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>TELECOM Bretagne</h3>
+                  <p class="info">MSc in Convergent Networks <span>&bull;</span> <em class="date">2009 - 2011</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Beijing University of Posts and Telecommunications</h3>
+                  <p class="info">B.A. degree in Telecom Ingineering<span>&bull;</span> <em class="date">2005 - 2009</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -203,8 +231,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Point Transaction System - Verifone France</h3>
+                  <p class="info">Information System Developer <span>&bull;</span> <em class="date">August 2014 - Present</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -221,8 +249,42 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Amadeus S.A.S</h3>
+                  <p class="info">Distributed System Back-end Developer <span>&bull;</span> <em class="date">November 2012 - June 2014</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Dassault Systems</h3>
+                  <p class="info">Trainee - Software Developer <span>&bull;</span> <em class="date">Febrary 2012 - August 2012</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>France Telecom Orange Labs</h3>
+                  <p class="info">R&D Ingineer <span>&bull;</span> <em class="date">April 2011 - September 2011</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -259,12 +321,12 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+					<li><span class="bar-expand C-language"></span><em>C-language</em></li>
+                                        <li><span class="bar-expand python"></span><em>python</em></li>
+					<li><span class="bar-expand SQL"></span><em>SQL</em></li>
+					<li><span class="bar-expand UNIX"></span><em>UNIX</em></li>
+					<li><span class="bar-expand CI"></span><em>Continuous Integration</em></li>
+                                        <li><span class="bar-expand socket"></span><em>Socket Programming</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
