delete call-to-action section

--- a/index.html
+++ b/index.html
@@ -637,38 +637,6 @@ blablablablablablablablablablablablablabla
    </section> <!-- Portfolio Section End-->
 
 
-   <!-- Call-To-Action Section
-   ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
-
-         <div class="seven columns">
-
-            <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
-            <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
-
-         </div>
-
-         <div class="three columns action">
-
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Sign Up Now</a>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
-
-
    <!-- Testimonials Section
    ================================================== -->
    <section id="testimonials">
@@ -848,17 +816,18 @@ blablablablablablablablablablablablablabla
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/yinxia.zhao"><i class="fa fa-facebook"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+               <li><a href="https://www.linkedin.com/pub/zhao-yinxia/17/9a2/8b7"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="http://instagram.com/hydezhao"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.flickr.com/photos/hydezhao"><i class="fa fa-flickr"></i></a></li>
+               <li><a href="https://github.com/yinxiazhao"><i class="fa fa-github"></i></a></li>
+               <li><a href="mailto:yinxia.zhao@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
+               <li>&copy; Copyright 2014 Yinxia Zhao</li>
                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
             </ul>
 
