--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline"><span>Yinxia</span>Zhao</h1>
+            <h1 class="responsive-headline">Yinxia Zhao</h1>
             <h3>Borned in China,I'm an <span>information system developer</span> and <span>photographer</span> living in Paris. Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -167,10 +167,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">MSc in Mathematics and Information <span>&bull;</span> <em class="date">2011 - 2012</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
                   </p>
 
                </div>
@@ -185,10 +181,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">MSc in Convergent Networks <span>&bull;</span> <em class="date">2009 - 2011</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
                </div>
@@ -202,10 +194,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">B.A. degree in Telecom Ingineering<span>&bull;</span> <em class="date">2005 - 2009</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
                </div>
@@ -235,10 +223,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">Information System Developer <span>&bull;</span> <em class="date">August 2014 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
                   </p>
 
                </div>
@@ -253,10 +237,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">Distributed System Back-end Developer <span>&bull;</span> <em class="date">November 2012 - June 2014</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
                </div>
@@ -270,10 +250,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">Trainee - Software Developer <span>&bull;</span> <em class="date">Febrary 2012 - August 2012</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
                </div>
@@ -287,10 +263,6 @@ blablablablablablablablablablablablablabla
                   <p class="info">R&D Ingineer <span>&bull;</span> <em class="date">April 2011 - September 2011</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
                </div>
@@ -312,21 +284,20 @@ blablablablablablablablablablablablablabla
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>
+                
             </p>
 
 				<div class="bars">
 
 				   <ul class="skills">
-					<li><span class="bar-expand C-language"></span><em>C-language</em></li>
+					<li><span class="bar-expand C-language"></span><em>C/C++</em></li>
                                         <li><span class="bar-expand python"></span><em>python</em></li>
 					<li><span class="bar-expand SQL"></span><em>SQL</em></li>
 					<li><span class="bar-expand UNIX"></span><em>UNIX</em></li>
-					<li><span class="bar-expand CI"></span><em>Continuous Integration</em></li>
-                                        <li><span class="bar-expand socket"></span><em>Socket Programming</em></li>
+					<li><span class="bar-expand photography"></span><em>Photography</em></li>
+                                        <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
+                                        <li><span class="bar-expand lightroom"></span><em>Lightroom</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -767,39 +738,14 @@ blablablablablablablablablablablablablabla
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Yinxia zhao<br>
+						   43 Bis Rue De Bellevue,<br>
+						   92100 BOULOGNE-BILLANCOURT<br>
+                                                   FRANCE<br>
+						   <span>(+33) 6 66 70 99 08</span>
 					   </p>
 
 				   </div>
-
-               <div class="widget widget_tweets">
-
-                  <h4 class="widget-title">Latest Tweets</h4>
-
-                  <ul id="twitter">
-                     <li>
-                        <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">2 Days Ago</a></b>
-                     </li>
-                     <li>
-                        <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">3 Days Ago</a></b>
-                     </li>
-                  </ul>
-
-		         </div>
-
             </aside>
 
       </div>
