--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Yinxia Zhao</h1>
-            <h3>Borned in China,I'm an <span>information system developer</span> and <span>photographer</span> living in Paris. Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h3>Born in China,I'm an <span>information system developer</span> and <span>photographer</span> living in Paris. Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.facebook.com/yinxia.zhao"><i class="fa fa-facebook"></i></a></li>
